<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@android:color/white"
    android:padding="24dp">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/budget_train_logo"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:layout_marginBottom="16dp"/>


    <!-- Login button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textAllCaps="true"
        app:icon="@drawable/ic_login"
        android:backgroundTint="#0097A7"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp"/>

    <!-- Register button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#0097A7"
        app:icon="@android:drawable/ic_menu_add"
        android:text="@string/register_new_account"
        android:textColor="@android:color/white" />
</LinearLayout>
